Gencode/Test/Invalide/test_debordement_pile.deca
// Description:
//    tests sur l'appel de fonctions mutuellement récursives
//    Ackermann
//
// Resultats:
//    Levée d'erreur
//    
//
// Historique:
//    cree le 20/01/2012


class Rec {
      int ackermann (int m, int n) {
      	  if (m == 0) {
	     return (n+1);
	  }
	  else {
		if(n == 0) {
		     return ackermann(m-1,1);
		}
      		else {
		     return ackermann(m-1,ackermann(m,n-1));
		}
	  }
      }
}

Rec calcule = new Rec();
{
	println("Ackermann(5,20) = ", calcule.ackermann(5,20));
}